--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/aivPicture"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:transitionName="picture"
+            tools:src="@drawable/bg_grey"
+            android:layout_margin="@dimen/dimen_16"
+            android:layout_marginBottom="@dimen/dimen_8"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtvTitle"
+            style="@style/RobotoBold"
+            tools:text="JUDUL"
+            android:textSize="@dimen/text_16"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginBottom="@dimen/dimen_8"
+            android:layout_marginHorizontal="@dimen/dimen_16"
+            android:transitionName="name"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtvDescription"
+            style="@style/RobotoBlackRegular"
+            tools:text="Deskripsi di sini"
+            android:textSize="@dimen/text_14"
+            android:layout_width="wrap_content"
+            android:layout_marginHorizontal="@dimen/dimen_16"
+            android:layout_height="20dp"
+            android:transitionName="description"/>
+
+</androidx.appcompat.widget.LinearLayoutCompat>
